# swift-server/app/bank-transactions/label.service.swift
@@ -1,30 +1,0 @@
-import Fluent
-import Vapor
-
-struct LabelService {
-	func createLabel(req: Request, label: Label) async throws -> Label {
-		try await label.save(on: req.db)
-		return label
-	}
-
-	func addTransaction(req: Request, labelTransaction: LabelTransaction) async throws
-		-> LabelTransaction
-	{
-		try await labelTransaction.save(on: req.db)
-		return labelTransaction
-	}
-
-	func getAll(on db: Database, groupIds: [UUID]) async throws -> [Label] {
-		try await Label.query(on: db)
-			.filter(\.$groupOwner.$id ~~ groupIds)
-			.all()
-	}
-
-	func getLabelsIdForTransaction(req: Request, transactionId: UUID) async throws -> [UUID] {
-		let labelTransactions = try await LabelTransaction.query(on: req.db)
-			.filter(\.$transaction.$id == transactionId)
-			.all()
-
-		return labelTransactions.map { $0.$label.id }
-	}
-}
